--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter progress tools/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Cory House",
@@ -55,7 +55,8 @@
     "nock": "9.0.13",
     "npm-run-all": "4.0.2",
     "open": "0.0.5",
-    "react-addons-test-utils": "15.6.0",
+    "prop-types": "15.5.10",
+    "react-test-renderer": "15.6.1",
     "redux-immutable-state-invariant": "2.0.0",
     "redux-mock-store": "1.2.3",
     "rimraf": "2.6.1",
